--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   cloud_firestore: ^4.15.4
   cupertino_icons: ^1.0.6
-  device_preview: ^1.1.0
+  # device_preview: ^1.1.0
   dotted_border: ^2.1.0
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.4
