--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   percent_indicator: ^4.2.5
   rxdart: ^0.28.0
   shared_preferences: ^2.2.3
+  tutorial_coach_mark: 1.3.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
